# saber-agent

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
agents/saber/: __init__.py  __main__.py  agent.py  console.py  http.py  models.py  teams.py  tools.py
agents/saber/prompts/: orchestrator.yaml
